# langchain_template

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  README.zh-CN.md  SECURITY.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
config/: config.example.yaml  config.yaml
data/: README.md
docs/: api.md  architecture.md  cli.md  configuration.md  index.md  index.zh-CN.md
examples/: _args.py  run_agent.py  run_app.py  run_basic_chat.py  run_hybrid_search.py  run_memory_agent.py  run_quickstart.py  run_quickstart_rag.py  run_rag.py  run_router.py  run_streaming.py  run_structured_output.py  run_tasks.py
examples/data/: medical_demo.txt
src/lc_templates/: __init__.py  __main__.py  app.py  cli.py
src/lc_templates/agents/: __init__.py  basic_agent.py  memory_agent.py  structured_agent.py
src/lc_templates/chains/: __init__.py  basic_chat.py  prompt_chain.py  streaming.py  structured_output.py  tasks.py
src/lc_templates/core/: checkpoint.py  config.py  hooks.py  logging.py  middleware.py  models.py  output.py  prompts.py  schemas.py
src/lc_templates/rag/: __init__.py  hybrid.py  indexing.py  loaders.py  pipeline.py  rerank.py  retrievers.py  splitters.py
src/lc_templates/tools/: __init__.py  common.py
src/lc_templates/workflows/: __init__.py  router.py
tests/: _bootstrap.py  test_app.py  test_checkpoint.py  test_cli.py  test_config.py  test_hooks.py  test_indexing.py  test_logging.py  test_middleware.py  test_models.py  test_output.py  test_rag_pipeline.py  test_router.py  test_smoke.py  test_structured_output.py
