[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langchain12-templates"
version = "0.1.0"
description = "Engineering-ready LangChain templates for chat, agents, and RAG applications."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Open Source Contributors" }]
keywords = ["langchain", "rag", "agent", "llm", "templates"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries",
]
urls = { Homepage = "https://github.com/your-org/langchain12-templates", Repository = "https://github.com/your-org/langchain12-templates", Documentation = "https://github.com/your-org/langchain12-templates#readme", Issues = "https://github.com/your-org/langchain12-templates/issues" }
dependencies = [
  "langchain>=1.2,<1.3",
  "langgraph>=1.0,<1.1",
  "langchain-openai>=1.0,<1.1",
  "langchain-community>=0.4,<0.5",
  "langchain-text-splitters>=1.0,<1.1",
  "langchain-chroma>=1.0,<1.1",
  "langchain-ollama>=1.0,<1.1",
  "openai>=1.0,<2.0",
  "httpx>=0.27,<1.0",
  "pydantic>=2.9,<3.0",
  "PyYAML>=6.0,<7.0",
  "chromadb>=1.0,<2.0",
  "rank-bm25>=0.2.2,<0.3",
  "jieba>=0.42,<0.43",
  "numpy>=1.26,<3.0",
  "pypdf>=5.0,<6.0",
  "python-docx>=1.1,<2.0",
  "unstructured>=0.16,<0.17",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "pytest-cov>=5,<7",
  "ruff>=0.11,<1",
  "build>=1.2,<2",
  "twine>=5,<6",
  "pre-commit>=4,<5",
]
docs = [
  "mkdocs>=1.6,<2",
  "mkdocs-material>=9.6,<10",
]

[project.scripts]
lc-templates = "lc_templates.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q --strict-config --strict-markers"

[tool.coverage.run]
source = ["lc_templates"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
omit = ["tests/*", "examples/*"]
